Eclipse/LB/src/parser/LBParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /home/tarcisio/Desktop/Compiladores/Projeto/ProjetoCompiladores/limited_basic/ANTLR/LB.g 2009-11-30 00:13:01
package parser;
import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;
@SuppressWarnings("unused")
public class LBParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "TRUE", "FALSE", "NOT", "AND", "OR", "AS", "FUNCTION", "END", "PROCEDURE", "PRINT", "INPUT", "IF", "THEN", "ELSE", "FOR", "TO", "STEP", "NEXT", "DO", "WHILE", "LOOP", "UNTIL", "PROGRAM", "END_IF", "END_FUNCTION", "END_PROCEDURE", "EXIT_DO", "EXIT_FOR", "PROG", "ARGS", "GLOBAL_VAR", "LOCAL_VAR", "FUNCS", "PROCS", "FUNC", "PROC", "STMS", "DECLS", "CHAMADA", "IF_THEN_ELSE", "LACO_FOR", "LACO_UNTIL", "LACO_WHILE", "ATRIBUICAO", "CONDICAO", "PARAMS", "PARAM", "IF_NODE", "ELSE_NODE", "F_PRINT", "F_INPUT", "NAO", "BREAK_FOR", "BREAK_DO", "LIMITE_FOR", "STEP_FOR", "NEXT_FOR", "LOCAL_VARS", "GLOBAL_VARS", "ID", "LPAREN", "RPAREN", "INT", "STRING", "CHAR", "MAIOR", "MAIOR_IGUAL", "MENOR", "MENOR_IGUAL", "IGUAL", "DIFERENTE", "SOM", "SUB", "MULT", "DIV", "VIRGULA", "COMMENT", "WS", "ESC_SEQ", "HEX_DIGIT", "UNICODE_ESC", "OCTAL_ESC", "'BOOLEAN'", "'INTEGER'", "'STRING'", "'CHAR'"
    };
    public static final int FUNCTION=10;
    public static final int END_PROCEDURE=29;
    public static final int WHILE=23;
    public static final int MENOR=71;
    public static final int STMS=40;
    public static final int GLOBAL_VARS=62;
    public static final int OCTAL_ESC=85;
    public static final int BREAK_DO=57;
    public static final int CHAR=68;
    public static final int INPUT=14;
    public static final int FOR=18;
    public static final int STEP=20;
    public static final int DO=22;
    public static final int SUB=76;
    public static final int PARAM=50;
    public static final int NEXT_FOR=60;
    public static final int NOT=6;
    public static final int BREAK_FOR=56;
    public static final int ID=63;
    public static final int AND=7;
    public static final int EOF=-1;
    public static final int MENOR_IGUAL=72;
    public static final int MAIOR=69;
    public static final int LPAREN=64;
    public static final int IF=15;
    public static final int AS=9;
    public static final int RPAREN=65;
    public static final int PROG=32;
    public static final int ESC_SEQ=82;
    public static final int THEN=16;
    public static final int STEP_FOR=59;
    public static final int END_FUNCTION=28;
    public static final int CHAMADA=42;
    public static final int LOCAL_VAR=35;
    public static final int LOOP=24;
    public static final int PROC=39;
    public static final int ARGS=33;
    public static final int NEXT=21;
    public static final int F_INPUT=54;
    public static final int COMMENT=80;
    public static final int LIMITE_FOR=58;
    public static final int PARAMS=49;
    public static final int VIRGULA=79;
    public static final int TO=19;
    public static final int UNICODE_ESC=84;
    public static final int ELSE=17;
    public static final int DIFERENTE=74;
    public static final int HEX_DIGIT=83;
    public static final int INT=66;
    public static final int LOCAL_VARS=61;
    public static final int PROCS=37;
    public static final int MULT=77;
    public static final int DECLS=41;
    public static final int TRUE=4;
    public static final int T__87=87;
    public static final int PRINT=13;
    public static final int PROCEDURE=12;
    public static final int T__86=86;
    public static final int T__89=89;
    public static final int T__88=88;
    public static final int IF_NODE=51;
    public static final int WS=81;
    public static final int LACO_WHILE=46;
    public static final int EXIT_DO=30;
    public static final int ATRIBUICAO=47;
    public static final int LACO_FOR=44;
    public static final int ELSE_NODE=52;
    public static final int UNTIL=25;
    public static final int FUNC=38;
    public static final int F_PRINT=53;
    public static final int IF_THEN_ELSE=43;
    public static final int LACO_UNTIL=45;
    public static final int OR=8;
    public static final int EXIT_FOR=31;
    public static final int END_IF=27;
    public static final int SOM=75;
    public static final int PROGRAM=26;
    public static final int IGUAL=73;
    public static final int FUNCS=36;
    public static final int DIV=78;
    public static final int END=11;
    public static final int NAO=55;
    public static final int FALSE=5;
    public static final int MAIOR_IGUAL=70;
    public static final int CONDICAO=48;
    public static final int STRING=67;
    public static final int GLOBAL_VAR=34;

    // delegates
    // delegators


        public LBParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public LBParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return LBParser.tokenNames; }
    public String getGrammarFileName() { return "/home/tarcisio/Desktop/Compiladores/Projeto/ProjetoCompiladores/limited_basic/ANTLR/LB.g"; }


    public static class program_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // /home/tarcisio/Desktop/Compiladores/Projeto/ProjetoCompiladores/limited_basic/ANTLR/LB.g:79:1: program : PROGRAM nomePrograma listaVariavelGlobal listaDeclaracao listaStatement END -> ^( PROG ^( nomePrograma ) ^( GLOBAL_VARS ( listaVariavelGlobal )? ) ^( DECLS ( listaDeclaracao )? ) ^( STMS ( listaStatement )? ) ) ;
    public final LBParser.program_return program() throws RecognitionException {
        LBParser.program_return retval = new LBParser.program_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token PROGRAM1=null;
        Token END6=null;
        LBParser.nomePrograma_return nomePrograma2 = null;

        LBParser.listaVariavelGlobal_return listaVariavelGlobal3 = null;

        LBParser.listaDeclaracao_return listaDeclaracao4 = null;

        LBParser.listaStatement_return listaStatement5 = null;


        CommonTree PROGRAM1_tree=null;
        CommonTree END6_tree=null;
        RewriteRuleTokenStream stream_PROGRAM=new RewriteRuleTokenStream(adaptor,"token PROGRAM");
        RewriteRuleTokenStream stream_END=new RewriteRuleTokenStream(adaptor,"token END");
        RewriteRuleSubtreeStream stream_listaVariavelGlobal=new RewriteRuleSubtreeStream(adaptor,"rule listaVariavelGlobal");
        RewriteRuleSubtreeStream stream_listaDeclaracao=new RewriteRuleSubtreeStream(adaptor,"rule listaDeclaracao");
        RewriteRuleSubtreeStream stream_listaStatement=new RewriteRuleSubtreeStream(adaptor,"rule listaStatement");
        RewriteRuleSubtreeStream stream_nomePrograma=new RewriteRuleSubtreeStream(adaptor,"rule nomePrograma");
        try {
            // /home/tarcisio/Desktop/Compiladores/Projeto/ProjetoCompiladores/limited_basic/ANTLR/LB.g:79:9: ( PROGRAM nomePrograma listaVariavelGlobal listaDeclaracao listaStatement END -> ^( PROG ^( nomePrograma ) ^( GLOBAL_VARS ( listaVariavelGlobal )? ) ^( DECLS ( listaDeclaracao )? ) ^( STMS ( listaStatement )? ) ) )
            // /home/tarcisio/Desktop/Compiladores/Projeto/ProjetoCompiladores/limited_basic/ANTLR/LB.g:79:11: PROGRAM nomePrograma listaVariavelGlobal listaDeclaracao listaStatement END
            {
            PROGRAM1=(Token)match(input,PROGRAM,FOLLOW_PROGRAM_in_program440);  
            stream_PROGRAM.add(PROGRAM1);

            pushFollow(FOLLOW_nomePrograma_in_program446);
            nomePrograma2=nomePrograma();

            state._fsp--;

            stream_nomePrograma.add(nomePrograma2.getTree());
            pushFollow(FOLLOW_listaVariavelGlobal_in_program452);
            listaVariavelGlobal3=listaVariavelGlobal();

            state._fsp--;

            stream_listaVariavelGlobal.add(listaVariavelGlobal3.getTree());
            pushFollow(FOLLOW_listaDeclaracao_in_program457);
            listaDeclaracao4=listaDeclaracao();

            state._fsp--;

            stream_listaDeclaracao.add(listaDeclaracao4.getTree());
            pushFollow(FOLLOW_listaStatement_in_program462);
            listaStatement5=listaStatement();

            state._fsp--;

            stream_listaStatement.add(listaStatement5.getTree());
            END6=(Token)match(input,END,FOLLOW_END_in_program470);  
            stream_END.add(END6);



            // AST REWRITE
            // elements: listaStatement, listaVariavelGlobal, listaDeclaracao, nomePrograma
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 88:2: -> ^( PROG ^( nomePrograma ) ^( GLOBAL_VARS ( listaVariavelGlobal )? ) ^( DECLS ( listaDeclaracao )? ) ^( STMS ( listaStatement )? ) )
            {
                // /home/tarcisio/Desktop/Compiladores/Projeto/ProjetoCompiladores/limited_basic/ANTLR/LB.g:88:5: ^( PROG ^( nomePrograma ) ^( GLOBAL_VARS ( listaVariavelGlobal )? ) ^( DECLS ( listaDeclaracao )? ) ^( STMS ( listaStatement )? ) )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PROG, "PROG"), root_1);

                // /home/tarcisio/Desktop/Compiladores/Projeto/ProjetoCompiladores/limited_basic/ANTLR/LB.g:89:2: ^( nomePrograma )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot(stream_nomePrograma.nextNode(), root_2);

                adaptor.addChild(root_1, root_2);
                }
                // /home/tarcisio/Desktop/Compiladores/Projeto/ProjetoCompiladores/limited_basic/ANTLR/LB.g:90:2: ^( GLOBAL_VARS ( listaVariavelGlobal )? )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(GLOBAL_VARS, "GLOBAL_VARS"), root_2);

                // /home/tarcisio/Desktop/Compiladores/Projeto/ProjetoCompiladores/limited_basic/ANTLR/LB.g:90:16: ( listaVariavelGlobal )?
                if ( stream_listaVariavelGlobal.hasNext() ) {
                    adaptor.addChild(root_2, stream_listaVariavelGlobal.nextTree());

                }
                stream_listaVariavelGlobal.reset();

                adaptor.addChild(root_1, root_2);
                }
                // /home/tarcisio/Desktop/Compiladores/Projeto/ProjetoCompiladores/limited_basic/ANTLR/LB.g:91:2: ^( DECLS ( listaDeclaracao )? )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(DECLS, "DECLS"), root_2);

                // /home/tarcisio/Desktop/Compiladores/Projeto/ProjetoCompiladores/limited_basic/ANTLR/LB.g:91:10: ( listaDeclaracao )?
                if ( stream_listaDeclaracao.hasNext() ) {
                    adaptor.addChild(root_2, stream_listaDeclaracao.nextTree());

                }
                stream_listaDeclaracao.reset();

                adaptor.addChild(root_1, root_2);
                }
                // /home/tarcisio/Desktop/Compiladores/Projeto/ProjetoCompiladores/limited_basic/ANTLR/LB.g:92:2: ^( STMS ( listaStatement )? )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(STMS, "STMS"), root_2);

                // /home/tarcisio/Desktop/Compiladores/Projeto/ProjetoCompiladores/limited_basic/ANTLR/LB.g:92:9: ( listaStatement )?
                if ( stream_listaStatement.hasNext() ) {
                    adaptor.addChild(root_2, stream_listaStatement.nextTree());

                }
                stream_listaStatement.reset();

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class nomePrograma_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "nomePrograma"
    // /home/tarcisio/Desktop/Compiladores/Projeto/ProjetoCompiladores/limited_basic/ANTLR/LB.g:96:1: nomePrograma : ID ;
    public final LBParser.nomePrograma_return nomePrograma() throws RecognitionException {
        LBParser.nomePrograma_return retval = new LBParser.nomePrograma_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token ID7=null;

        CommonTree ID7_tree=null;

        try {
            // /home/tarcisio/Desktop/Compiladores/Projeto/ProjetoCompiladores/limited_basic/ANTLR/LB.g:97:2: ( ID )
            // /home/tarcisio/Desktop/Compiladores/Projeto/ProjetoCompiladores/limited_basic/ANTLR/LB.g:97:4: ID
            {
            root_0 = (CommonTree)adaptor.nil();

            ID7=(Token)match(input,ID,FOLLOW_ID_in_nomePrograma528); 
            ID7_tree = (CommonTree)adaptor.create(ID7);
            adaptor.addChild(root_0, ID7_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "nomePrograma"

    public static class statement_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "statement"
    // /home/tarcisio/Desktop/Compiladores/Projeto/ProjetoCompiladores/limited_basic/ANTLR/LB.g:105:1: statement : ( chamadaMetodo -> ^( CHAMADA chamadaMetodo ) | if_then_else -> ^( IF_THEN_ELSE if_then_else ) | lacoFor -> ^( lacoFor ) | lacoUntil -> ^( lacoUntil ) | lacoWhile -> ^( lacoWhile ) | built_in -> ^( built_in ) | atribuicao -> ^( ATRIBUICAO atribuicao ) | EXIT_DO -> ^( BREAK_DO ) | EXIT_FOR -> ^( BREAK_FOR ) );
    public final LBParser.statement_return statement() throws RecognitionException {
        LBParser.statement_return retval = new LBParser.statement_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token EXIT_DO15=null;
        Token EXIT_FOR16=null;
        LBParser.chamadaMetodo_return chamadaMetodo8 = null;

        LBParser.if_then_else_return if_then_else9 = null;

        LBParser.lacoFor_return lacoFor10 = null;

        LBParser.lacoUntil_return lacoUntil11 = null;

        LBParser.lacoWhile_return lacoWhile12 = null;

        LBParser.built_in_return built_in13 = null;

        LBParser.atribuicao_return atribuicao14 = null;


        CommonTree EXIT_DO15_tree=null;
        CommonTree EXIT_FOR16_tree=null;
        RewriteRuleTokenStream stream_EXIT_DO=new RewriteRuleTokenStream(adaptor,"token EXIT_DO");
        RewriteRuleTokenStream stream_EXIT_FOR=new RewriteRuleTokenStream(adaptor,"token EXIT_FOR");
        RewriteRuleSubtreeStream stream_built_in=new RewriteRuleSubtreeStream(adaptor,"rule built_in");
        RewriteRuleSubtreeStream stream_lacoUntil=new RewriteRuleSubtreeStream(adaptor,"rule lacoUntil");
        RewriteRuleSubtreeStream stream_atribuicao=new RewriteRuleSubtreeStream(adaptor,"rule atribuicao");
        RewriteRuleSubtreeStream stream_lacoWhile=new RewriteRuleSubtreeStream(adaptor,"rule lacoWhile");
        RewriteRuleSubtreeStream stream_chamadaMetodo=new RewriteRuleSubtreeStream(adaptor,"rule chamadaMetodo");
        RewriteRuleSubtreeStream stream_if_then_else=new RewriteRuleSubtreeStream(adaptor,"rule if_then_else");
        RewriteRuleSubtreeStream stream_lacoFor=new RewriteRuleSubtreeStream(adaptor,"rule lacoFor");
        try {
            // /home/tarcisio/Desktop/Compiladores/Projeto/ProjetoCompiladores/limited_basic/ANTLR/LB.g:106:2: ( chamadaMetodo -> ^( CHAMADA chamadaMetodo ) | if_then_else -> ^( IF_THEN_ELSE if_then_else ) | lacoFor -> ^( lacoFor ) | lacoUntil -> ^( lacoUntil ) | lacoWhile -> ^( lacoWhile ) | built_in -> ^( built_in ) | atribuicao -> ^( ATRIBUICAO atribuicao ) | EXIT_DO -> ^( BREAK_DO ) | EXIT_FOR -> ^( BREAK_FOR ) )
            int alt1=9;
            alt1 = dfa1.predict(input);
            switch (alt1) {
                case 1 :
                    // /home/tarcisio/Desktop/Compiladores/Projeto/ProjetoCompiladores/limited_basic/ANTLR/LB.g:106:4: chamadaMetodo
                    {
                    pushFollow(FOLLOW_chamadaMetodo_in_statement545);
                    chamadaMetodo8=chamadaMetodo();

                    state._fsp--;

                    stream_chamadaMetodo.add(chamadaMetodo8.getTree());


                    // AST REWRITE
                    // elements: chamadaMetodo
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 108:2: -> ^( CHAMADA chamadaMetodo )
                    {
                        // /home/tarcisio/Desktop/Compiladores/Projeto/ProjetoCompiladores/limited_basic/ANTLR/LB.g:108:5: ^( CHAMADA chamadaMetodo )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(CHAMADA, "CHAMADA"), root_1);

                        adaptor.addChild(root_1, stream_chamadaMetodo.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // /home/tarcisio/Desktop/Compiladores/Projeto/ProjetoCompiladores/limited_basic/ANTLR/LB.g:110:4: if_then_else
                    {
                    pushFollow(FOLLOW_if_then_else_in_statement565);
                    if_then_else9=if_then_else();

                    state._fsp--;

                    stream_if_then_else.add(if_then_else9.getTree());


                    // AST REWRITE
                    // elements: if_then_else
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 112:2: -> ^( IF_THEN_ELSE if_then_else )
                    {
                        // /home/tarcisio/Desktop/Compiladores/Projeto/ProjetoCompiladores/limited_basic/ANTLR/LB.g:112:5: ^( IF_THEN_ELSE if_then_else )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(IF_THEN_ELSE, "IF_THEN_ELSE"), root_1);

                        adaptor.addChild(root_1, stream_if_then_else.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 3 :
                    // /home/tarcisio/Desktop/Compiladores/Projeto/ProjetoCompiladores/limited_basic/ANTLR/LB.g:114:4: lacoFor
                    {
                    pushFollow(FOLLOW_lacoFor_in_statement585);
                    lacoFor10=lacoFor();

                    state._fsp--;

                    stream_lacoFor.add(lacoFor10.getTree());

